2013-09-23  Andy Buckley  <andy.buckley@cern.ch>

	* Add the -avoid-version flag to libtool.

2013-09-22  Andy Buckley  <andy.buckley@cern.ch>

	* Change implementation of forced positivity to use an int value
	to allow for better caching and distinguishing between
	forced-positive and forced-positive-definite. The flag has been
	renamed to ForcePositive, to indicate that it triggers an action
	rather than just being some manually provided information about
	the PDF in question.

2013-09-06  James Ferrando <james.ferrando@cern.ch>

	* Modified PDFLIB comaptibility function to handle format of input arrays from POWHEG.

2013-09-03  Andy Buckley  <andy.buckley@cern.ch>

	* Fixed misnaming in the automatic rewriting of cteq6ll -> cteq6l1.

2013-08-30 Steve Lloyd <slloyd1990@gmail.com>

	* Added functionality for forcing a loaded GridPDF to return positive
	definite values through the flag "PositiveDefinite" in the set metadata.
	This is to prevent overshooting in to negative
	values when interpolating/extrapolating.  Updated creategrids script with a
	--force-pos-def flag to reflect this change.

2013-08-30  Andy Buckley  <andy.buckley@cern.ch>

	* Adding do-nothing overloadings of the 2-arg fallback version of
	get_entry() to PDFSet and PDFInfo: it turns out that inheritance
	and multiple dispatch of class methods don't automatically play as
	nicely as you might think!

2013-08-29  Andy Buckley  <andy.buckley@cern.ch>

	* 6.0.2 patch release.

	* Updating the version for the latest patch, and being more
	pessimistic about Boost compatibility: assuming that Boost 1.49 is
	the oldest compatible release until we hear otherwise.

	* Reworking the validation system to use 0 rather than 21 for the
	gluon ID (a simplification due to v5/v6 compatibility) and to
	allow building of top PDF validation plots.

	* Removing builds of examples and tests directories from the
	top-level default make target.

2013-08-29  James Ferrando  <james.ferrando@cern.ch>
